--- a/fs/Makefile
+++ b/fs/Makefile
@@ -4,14 +4,9 @@ FORTH = gforth
 
 VPATH = ../j1_forth
 
-SRC = crossj1.fs \
-      basewords.fs \
-      nuc.fs \
-      main.fs
-
 .PHONY: sim syn
 
-j1.mif j1.hex j1.lst: $(SRC) *.fs
+j1.mif j1.hex j1.lst: $(wildcard *.fs)
 	$(FORTH) main.fs
 
 sim: j1.hex
